--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
     <ImageButton
         android:layout_width="160dp"
         android:layout_height="150dp"
-        android:id="@+id/imageButton"
+        android:id="@+id/imgBtn1"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
@@ -20,7 +20,7 @@
     <ImageButton
         android:layout_width="160dp"
         android:layout_height="150dp"
-        android:id="@+id/imageButton2"
+        android:id="@+id/imgBtn2"
         android:layout_alignParentTop="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
@@ -28,7 +28,7 @@
     <ImageButton
         android:layout_width="160dp"
         android:layout_height="150dp"
-        android:id="@+id/imageButton3"
+        android:id="@+id/imgBtn3"
         android:layout_centerVertical="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
@@ -36,7 +36,7 @@
     <ImageButton
         android:layout_width="160dp"
         android:layout_height="150dp"
-        android:id="@+id/imageButton4"
+        android:id="@+id/imgBtn4"
         android:layout_centerVertical="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
@@ -45,18 +45,33 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Change"
-        android:id="@+id/button"
-        android:layout_below="@+id/button2"
-        android:layout_centerHorizontal="true" />
+        android:id="@+id/btn1"
+        android:layout_alignTop="@+id/btn2"
+        android:layout_alignRight="@+id/imgBtn4"
+        android:layout_alignEnd="@+id/imgBtn4"
+        android:layout_marginRight="35dp"
+        android:layout_marginEnd="35dp" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Sound"
-        android:id="@+id/button2"
-        android:layout_below="@+id/imageButton3"
-        android:layout_alignLeft="@+id/button"
-        android:layout_alignStart="@+id/button"
-        android:layout_marginTop="42dp" />
+        android:id="@+id/btn2"
+        android:layout_marginTop="45dp"
+        android:layout_below="@+id/imgBtn3"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginLeft="35dp"
+        android:layout_marginStart="35dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="0/0"
+        android:id="@+id/tvScore"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+ />
 
 </RelativeLayout>
