--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -44,25 +44,11 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Change"
-        android:id="@+id/btn1"
-        android:layout_alignTop="@+id/btn2"
-        android:layout_alignRight="@+id/imgBtn4"
-        android:layout_alignEnd="@+id/imgBtn4"
-        android:layout_marginRight="35dp"
-        android:layout_marginEnd="35dp" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:text="Sound"
         android:id="@+id/btn2"
-        android:layout_marginTop="45dp"
         android:layout_below="@+id/imgBtn3"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginLeft="35dp"
-        android:layout_marginStart="35dp" />
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="46dp" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -70,8 +56,8 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="0/0"
         android:id="@+id/tvScore"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
- />
+        android:layout_below="@+id/btn2"
+        android:layout_toRightOf="@+id/imgBtn3"
+        android:layout_toEndOf="@+id/imgBtn3" />
 
 </RelativeLayout>
