--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -54,10 +54,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="0/0"
+        android:text="0%"
         android:id="@+id/tvScore"
         android:layout_below="@+id/btn2"
-        android:layout_toRightOf="@+id/imgBtn3"
-        android:layout_toEndOf="@+id/imgBtn3" />
+        android:layout_centerHorizontal="true"/>
 
 </RelativeLayout>
