--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,54 +9,73 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.arny.jlmvcv2.MainActivity">
 
-    <ImageButton
-        android:id="@+id/imgBtn1"
-        android:layout_width="160dp"
-        android:layout_height="150dp"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true" />
-
-    <ImageButton
-        android:id="@+id/imgBtn2"
-        android:layout_width="160dp"
-        android:layout_height="150dp"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true" />
-
-    <ImageButton
-        android:id="@+id/imgBtn3"
-        android:layout_width="160dp"
-        android:layout_height="150dp"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_centerVertical="true" />
-
-    <ImageButton
-        android:id="@+id/imgBtn4"
-        android:layout_width="160dp"
-        android:layout_height="150dp"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_centerVertical="true" />
-
     <Button
         android:id="@+id/btn2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/imgBtn3"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="46dp"
-        android:text="Sound" />
+        android:text="Sound"
+        android:layout_marginTop="52dp"
+        android:layout_below="@+id/gridLayout"
+        android:layout_centerHorizontal="true" />
 
     <TextView
         android:id="@+id/tvScore"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/btn2"
-        android:layout_centerHorizontal="true"
         android:text="0%"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:layout_below="@+id/btn2"
+        android:layout_centerHorizontal="true" />
+
+    <GridLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/gridLayout"
+        android:rowCount="2"
+        android:columnCount="2"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true">
+
+        <ImageButton
+            android:id="@+id/imgBtn1"
+            android:layout_width="160dp"
+            android:layout_height="160dp"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_row="0"
+            android:layout_column="0" />
+
+        <ImageButton
+            android:id="@+id/imgBtn2"
+            android:layout_width="160dp"
+            android:layout_height="160dp"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentTop="true"
+            android:layout_row="0"
+            android:layout_column="1" />
+
+        <ImageButton
+            android:id="@+id/imgBtn3"
+            android:layout_width="160dp"
+            android:layout_height="160dp"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_centerVertical="true"
+            android:layout_row="1"
+            android:layout_column="0" />
+
+        <ImageButton
+            android:id="@+id/imgBtn4"
+            android:layout_width="160dp"
+            android:layout_height="160dp"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_row="1"
+            android:layout_column="1" />
+
+    </GridLayout>
 
 </RelativeLayout>
